[codex] repo updates (#259)
